fix login and register on mobile

--- a/WP/static/css/styles.css
+++ b/WP/static/css/styles.css
@@ -308,7 +308,7 @@ h3{
       height: 70%;
 }
 
-@media screen and (min-width: 601){
+@media screen and (min-width: 601px){
     #myForm{
       height: 86%;
 }
